application-ingress-yaml/mysql-admin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mysql-admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: mysql-admin.yanqiw.qianyitian.com 
      http:
        paths:
          - backend:
              serviceName: my-release-phpmyadmin
              servicePort: 80
            path: /(.*)
    - host: mysql-admin.yanqiw-next.qianyitian.com 
      http:
        paths:
          - backend:
              serviceName: my-release-phpmyadmin
              servicePort: 80
            path: /(.*)
