application-ingress-yaml/nacos-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nacos-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: nacos.frankwang.cn 
      http:
        paths:
          - backend:
              serviceName: nacos-headless
              servicePort: 8848
            path: /(.*)
