application-ingress-yaml/photo-gallery-fe-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photo-gallery-fe-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: 9.momokanshu.com 
      http:
        paths:
          - backend:
              service:
                name: my-photo
                port: 
                  number: 80
            path: /
            pathType: Prefix
