application-ingress-yaml/xxl-job-admin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xxl-job-admin-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: job-admin.frankwang.cn 
      http:
        paths:
          - backend:
              serviceName: xxl-job-admin
              servicePort: 8080
            path: /(.*)
